...
    'رياضة',
    'موضة',
    'طبيعة',
  ];

  static const List<String> specialtiesEn = [
    'Wedding',
    'Engagement',
    'Events',
    'Family',
    'Kids',
    'Portrait',
    'Product',
...
